# makefile_practice

./: CMakeLists_notebook.md  README.md  makefilenote.md  readme.txt
0_learn_makefile_with_me/: Makefile  foo
1_class/: main.c  makefile  mytool  tool1.h  tool2.c
2_level2/: makefile
2_level2/include/: defs.h
3_test/: Makefile  mytool  tool.mk
4_learn_makefile_with_me/: Makefile  main.c
4_make.defs/: Makefile  main.c
4_make.defs/src/: common.c
4_make.defs/src/module1/: Make.defs  module1.h  module1_1.c  module1_3.c
5_xiacaojun_makefile/: 1_first_make.kdev4  Makefile  first_make.cpp  xdata.cpp  xdata.h
6_compile_process/: test_gcc.cpp
6_makefile/: test  test_gcc.s
7_compile_c_cpp/: AppleWrapper.h  apple.cpp  makefile  readme.md  test.c
7_compile_c_cpp/1/: add.cpp  add.h  main.c
7_compile_c_cpp/2/: add.cpp
7_compile_c_cpp/3/: Person.cpp  Person.h  a.out  main.c
8_mi_project/: Application.mk  Directory.mk
9_shell_cmd_test/: cmd.sh
ch0/: CMakeLists.txt
ch1/: CMakeCache.txt  CMakeLists.txt  Makefile  TutorialConfig.h  TutorialConfig.h.in  build.sh  cmake_install.cmake  main.cpp
ch1_lib/: print_hello.h  public.c
ch2/: CMakeLists.txt  build.sh  main.cpp
ch2/src/: test.cpp
ch3/: CMakeLists.txt  build.sh  main.cpp
ch3_port_lib_cmake/public/: public.c
ch4/: CMakeLists.txt  main.cpp
ch5/: CMakeLists.txt  build.sh
ch5/sub/: CMakeLists.txt
ch6_lib/: CMakeLists.txt  main.c
ch6_lib/lib/: CMakeLists.txt  math_test.h
ch6_lib/math/: CMakeLists.txt
ch7_nested_cmake/: CMakeLists.txt  main.cpp
ch8_config_in/: CMakeLists.txt  TutorialConfig.h.in  main.cpp
ch9_static_lib/: CMakeLists.txt
cmakelists/: cmake_help.txt
cmakelists/ch0/: build.sh
cmakelists/ch1/: CMakeLists.txt
cmakelists/ch2/: CMakeLists.txt  build.sh  main.cpp
cmakelists/ch2/include/: mymath.h
cmakelists/ch2/src/: mymath.cpp
cmakelists/ch3/: CMakeLists.txt  main.cpp
cmakelists/ch3/include/: test.h
cmakelists/ch3/src/: test.cpp
cmakelists/ch4/: build.sh
cmakelists/ch5/: CMakeLists.txt  test.c
cmakelists/ch5/sub/: CMakeLists.txt
cmakelists/ch6_lib/: CMakeLists.txt
cmakelists/ch6_lib/include/: test.h
cmakelists/ch6_lib/math/src/: math_test.c
cmakelists/ch6_lib/src/: test.c
cmakelists/ch8_config_in/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
cmakelists/ch9_static_lib/: CMakeLists.txt  main.c
cmakelists/example1_lib/: CMakeLists.txt  print_hello.c
cmakelists/example2_port_lib/lib/: public.h
cmakelists/example2_port_lib/public/: 库文件
cmakelists/example3_port_lib_cmake/: port_api.h
example1_lib/: public.h  test  test.c
example2_port_lib/: a.out  test.c
example3_port_lib_cmake/: port_api.c
makefile/: makefilenote.md
makefile/0_learn_makefile_with_me/: Makefile  Makefile_backup  Makefile_v1  Makefile_v10_condition  Makefile_v11_function  Makefile_v12_pattern  Makefile_v2  Makefile_v3  Makefile_v4  Makefile_v5  Makefile_v6  Makefile_v7  Makefile_v8_nested_makefile  Makefile_variable  buffer.h  command.c  command.h  defs.h  display.c  display.h  files.c  files.h  foo  insert.c  insert.h  kbd.c  kbd.h  main.c  search.c  search.h  utils.c  utils.h
makefile/0_learn_makefile_with_me/subtest/: Makefile  subtest.c  subtest.h
makefile/1_class/: tool2.h
makefile/1_entrance/: makefile  tool1.c
makefile/2_level2/: defs.h  main.c
makefile/2_level2/include/: buffers.h
makefile/3_assign/: Makefile
makefile/3_entrance/: Makefile  main.c  tool.c  tool.h  tool.mk
makefile/4_make.defs/: Makefile  main  main.c
makefile/4_make.defs/include/: common.h
makefile/4_make.defs/src/: Make.defs  common.c
makefile/4_make.defs/src/module1/: Make.defs  module1_2.c
makefile/4_make.defs/src/module2/: Make.defs  module2.c  module2.h
makefile/4_make.defs/src/module3/: Make.defs  module3.c  module3.h
makefile/5_xiacaojun_makefile/: Makefile  first_make.cpp
makefile/5_xiacaojun_makefile/include/: test.h
makefile/7_compile_c_cpp/: AppleWrapper.h  test.c
makefile/7_compile_c_cpp/2/: a.out  main.c
makefile/8_mi_project/: main.c
makefile/compile_c_cpp/: AppleWrapper.cpp  apple.h  makefile  readme.md
makefile/compile_c_cpp/1/: Makefile  a.out
makefile/compile_c_cpp/2/: add.h
makefile/compile_c_cpp/3/: Wrapper.cpp  Wrapper.h
makefile/compile_process/: preprocess.txt
